[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/hitspots/hit_spot/hit_spot.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/hitspots/hitspots.gd" type="Script" id=2]

[node name="HitSpots" type="Node2D"]
script = ExtResource( 2 )

[node name="HitSpot" parent="." instance=ExtResource( 1 )]

[node name="HitSpot2" parent="." instance=ExtResource( 1 )]
input = "hitspot_2"
initial_rotation = 90

[node name="HitSpot3" parent="." instance=ExtResource( 1 )]
input = "hitspot_3"
initial_rotation = 180

[node name="HitSpot4" parent="." instance=ExtResource( 1 )]
input = "hitspot_4"
initial_rotation = 270
